Updating the README.
Now has better install instructions that may actually work, if the code builds.